Fixed mat-expansion-title text cut off issue

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,16 +8,17 @@ header {
   font-size: 2.7rem;
 }
 
-.small-header {
-  height: 50px;
-}
-
 h1 {
   font-size: 2.5rem;
 }
 
 mat-panel-title {
   font-size: 1.5rem;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+mat-panel-title:hover {
+  color: #3f51b5;
 }
 
 mat-expansion-panel-header {
